--- a/FrmSnek.resx
+++ b/FrmSnek.resx
@@ -123,4 +123,27 @@
   <metadata name="TmrMakeFud.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>145, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAICAQAAAAAADoAgAAJgAAABAQEAAAAAAAKAEAAA4DAAAoAAAAIAAAAEAAAAABAAQAAAAAAIAC
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAgAAAAICAAIAAAACAAIAAgIAAAMDAwACAgIAAAAD/AAD/
+        AAAA//8A/wAAAP8A/wD//wAA////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAO
+        7u7uAAAA7u7u7u4AAAAAAA4AAAAAAADu7u4AAAAAAAAA4AAAAAAA7u7gAAAAAAAAAO4AAAAADu7u4AAA
+        AAAAAAAOAAAAAA7u7gAAAAAAAAAADuAAAAAO7u4AAAAAAAAAAADgAAAA7u7gAAAAAAAAAAAA4AAAAO7u
+        4AAAAAAAAAAAAA4AAA7u7gAAAAAAAAAAAAAOAAAO7u4AAAAAAAAAAAAAAOAA7u7uAAAAAAAAAAAAAADg
+        AO7u4AAAAAAAAAAAAAAA4A7u7uAAAAAAAAAAAAAAAA4O7u4AAAAAAAAAAAAAAAAODu7uAAAAAAAAAAAA
+        AAAAAO7u4AAAAAAAAAAAAAAAAADu7uAAAAAAAAAAAAAAAAAADu7gAAAAAAAAAAAAAAAAAA7uAAAAAAAA
+        AAAAAAAAAAAO7gAAAAAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA////////
+        ////////////////////////4D8AP/v/wP/9/8H//P+B//7/g//+f4P//38H//9/B///vg///74P///c
+        D///3B///9gf///oP///6D////B////wf///+H////j////4/////f//////////////////////////
+        //8oAAAAEAAAACAAAAABAAQAAAAAAMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAgAAAAICAAIAA
+        AACAAIAAgIAAAMDAwACAgIAAAAD/AAD/AAAA//8A/wAAAP8A/wD//wAA////AAAAAAAAAAAAAAAAAAAA
+        AAAA7u4ADu7gAAAOAAAA7gAAAADgAA7uAAAAAOAADuAAAAAA4AAO4AAAAAAOAO4AAAAAAA4A7gAAAAAA
+        Dg7gAAAAAAAA7uAAAAAAAADuAAAAAAAAAA4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA//8AAP//
+        AADDhwAA788AAPePAAD3nwAA958AAPs/AAD7PwAA+n8AAPx/AAD8/wAA/v8AAP//AAD//wAA//8AAA==
+</value>
+  </data>
 </root>
